Automatically backed up by Learn

--- a/index.html
+++ b/index.html
@@ -8,10 +8,15 @@
 <body>
   <div class="wrapper">
     <!-- HEADER -->
+    <h1>Welcome to Riyadh</h1>
     <!-- SUB HEAD -->
+    <h4 style="color:white">Where A Traditional Past Meets a Modern Future</h4>
 
     <div id="content">
       <!-- IMAGES, SMALL SUB HEADS, PARAGRAPHS, LINKS -->
+      <img src="./images/transportation/transit.jpg" alt="blah">
+      <h4>Travel</h4>
+      <p></p>
     </div>
   </div>
 </body>
