--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
 
     <div id="content">
       <!-- IMAGES, SMALL SUB HEADS, PARAGRAPHS, LINKS -->
-      <img src="./images/transportation/transit.jpg" alt="Modern transport">
+      <img src="./images/transportation/transit.jpg" alt="Modern transit">
       <h4>Travel</h4>
       <p></p>
     </div>
