--- a/index.html
+++ b/index.html
@@ -10,11 +10,11 @@
     <!-- HEADER -->
     <h1>Welcome to Riyadh</h1>
     <!-- SUB HEAD -->
-    <h4 style="color:white">Where A Traditional Past Meets a Modern Future.</h4>
+    <h3 style="color:white">Where A Traditional Past Meets a Modern Future.</h3>
 
     <div id="content">
       <!-- IMAGES, SMALL SUB HEADS, PARAGRAPHS, LINKS -->
-      <img src="./images/transportation/transit.jpg" alt="Modern transit">
+      <img src="./images/transportation/transit.jpg" alt="Modern Transit">
       <h4>Travel</h4>
       <p></p>
     </div>
